CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ProjectFootball)

SET(CMAKE_VERBOSE_MAKEFILE "ON")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build")
SET(Boost_MINIMUM_VERSION "1.38")
SET(BIN_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/bin")
STRING(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LC)
SET(DATA_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/share/games/${PROJECT_NAME_LC}")
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules")
SET(LOCAL_INCLUDE_DIRS "${CMAKE_CURRENT_BINARY_DIR}/src" "${CMAKE_CURRENT_BINARY_DIR}/src/bullet")

if (WIN32)
	set(CMAKE_MODULE_PATH "$ENV{OGRE_HOME}/CMake/;${CMAKE_MODULE_PATH}")
endif (WIN32)

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	set(CMAKE_MODULE_PATH "/usr/lib64/OGRE/cmake/;${CMAKE_MODULE_PATH}")
endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")

if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	set(CMAKE_MODULE_PATH "${OGRE_SDK}/CMake" "${OGRE_SDK}/CMake/Utils" "${OGRE_SDK}/CMake/Packages")
endif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

FIND_PACKAGE(Boost REQUIRED COMPONENTS thread-mt filesystem-mt system-mt)
FIND_PACKAGE(SQLITE3 REQUIRED)
FIND_PACKAGE(Lua51 REQUIRED)
FIND_PACKAGE(SDL_mixer REQUIRED)
FIND_PACKAGE(OIS REQUIRED)
FIND_PACKAGE(OGRE REQUIRED)
FIND_PACKAGE(CEGUI REQUIRED COMPONENTS Ogre)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR}
		    ${LUA_INCLUDE_DIR}
		    ${SQLITE_INCLUDE_DIR}
		    ${OGRE_INCLUDE_DIRS}
		    ${OIS_INCLUDE_DIRS}
		    ${CEGUI_INCLUDE_DIR}
		    ${SDLMIXER_INCLUDE_DIR}
		    ${LOCAL_INCLUDE_DIRS})

ADD_SUBDIRECTORY(src)
