CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ProjectFootball)

# The version number.
SET(PF_VERSION_MAJOR 2)
SET(PF_VERSION_MINOR 2)
SET(PF_VERSION_BUILD 0)
SET(PF_VERSION_RC 0)

# current date and time
SET(DATE_TIME "")

SET(CMAKE_VERBOSE_MAKEFILE "ON")
SET(Boost_MINIMUM_VERSION "1.38")
STRING(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LC)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules")
SET(LOCAL_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/src"
		       "${PROJECT_SOURCE_DIR}/src/bullet"
		       "${CMAKE_CURRENT_BINARY_DIR}")

IF (WIN32)
	SET(CMAKE_MODULE_PATH "$ENV{OGRE_HOME}/CMake/;${CMAKE_MODULE_PATH}")
	SET(BIN_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}")
	SET(DATA_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/data")
	SET(CONFIG_FILE_PATH "${CMAKE_INSTALL_PREFIX}")
	EXECUTE_PROCESS(COMMAND "echo" "%date:~10,4%-%date:~4,2%-%date:~7,2% %time:~0,8%" OUTPUT_VARIABLE DATE_TIME)
ELSE (WIN32)
	IF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
		SET(CMAKE_MODULE_PATH "/usr/lib64/OGRE/cmake/;${CMAKE_MODULE_PATH}")
		SET(BOOST_LIBRARYDIR "/usr/lib/x86_64-linux-gnu;${BOOST_LIBRARYDIR}")
	ELSEIF (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
		SET(CMAKE_MODULE_PATH "${OGRE_SDK}/CMake" "${OGRE_SDK}/CMake/Utils" "${OGRE_SDK}/CMake/Packages")
	ELSE (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
		MESSAGE(FATAL_ERRORO "arch not supported.")
	ENDIF (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	SET(BIN_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/games/bin")
	SET(DATA_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/share/games/${PROJECT_NAME_LC}")
	SET(CONFIG_FILE_PATH "~/.${PROJECT_NAME_LC}")
	EXECUTE_PROCESS(COMMAND "date" "+%Y-%m-%d %H:%M:%S" OUTPUT_VARIABLE DATE_TIME)
ELSE (WIN32)
	MESSAGE(FATAL_ERRORO "arch not supported.")
ENDIF (WIN32)
STRING(REPLACE "\n" "" DATE_TIME ${DATE_TIME})

FIND_PACKAGE(Boost REQUIRED COMPONENTS thread filesystem system)
FIND_PACKAGE(SQLITE3 REQUIRED)
FIND_PACKAGE(Lua51 REQUIRED)
FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_mixer REQUIRED)
FIND_PACKAGE(OIS REQUIRED)
FIND_PACKAGE(OGRE REQUIRED)
FIND_PACKAGE(CEGUI REQUIRED COMPONENTS Ogre)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR}
		    ${LUA_INCLUDE_DIR}
		    ${SQLITE_INCLUDE_DIR}
		    ${OGRE_INCLUDE_DIRS}
		    ${OIS_INCLUDE_DIRS}
		    ${CEGUI_INCLUDE_DIR}
		    ${SDL_INCLUDE_DIR}
		    ${SDLMIXER_INCLUDE_DIR}
		    ${LOCAL_INCLUDE_DIRS})

# configure a header file to pass some of the CMake settings
# to the source code
CONFIGURE_FILE("${PROJECT_SOURCE_DIR}/src/projectfootball_config.h.in" "${CMAKE_CURRENT_BINARY_DIR}/projectfootball_config.h")

ADD_SUBDIRECTORY(src)
